<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaCanastaActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_nueva_canasta"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="sans"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_canasta_nombre"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="2dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNombreCanasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nombre"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_canasta_tienda"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="2dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextTiendaCanasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Tienda"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_canasta_descripcion"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="2dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextDescripcionCanasta"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:hint="Descripción"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_nueva_canasta_aceptar"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreenLight"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:shadowColor="@color/colorBlack"
            android:shadowRadius="10" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_nueva_canasta_cancelar"
            android:layout_weight="1"
            android:backgroundTint="@color/colorRedLight"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:shadowColor="@color/colorBlack"
            android:shadowRadius="10"
            android:onClick="cancelarNuevaCanasta"/>

    </LinearLayout>
</LinearLayout>