<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanastaActivity"
    android:orientation="vertical"
    android:padding="4dp"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/nombre_canasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_canasta_nombre"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="sans">
    </TextView>

    <TextView
        android:id="@+id/descripcion_canasta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_canasta_descripcion"
        android:textStyle="italic"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_marginBottom="10dp">
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/item_producto"
            android:id="@+id/recyclerViewPendientes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_nueva_canasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_baseline_add_24"
            android:onClick="nuevoProducto"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_canasta_completar"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreenLight"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:shadowColor="@color/colorBlack"
            android:shadowRadius="10"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_canasta_cancelar"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:shadowColor="@color/colorBlack"
            android:shadowRadius="10"/>

    </LinearLayout>


</LinearLayout>